# benchmark-large-json-parsing

./: .gitignore  README.md
cpp/rapidjson/: .gitignore  CMakeLists.txt  build.sh  sax.cpp  structure.cpp
elixir/json/: .gitignore  README.md  mix.exs
elixir/json/config/: config.exs
elixir/json/test/: json_test.exs
go/: naive.go  streamed-struct-jsoniter.go  streamed-struct.go  streamed.go
ruby/: app.rb
